syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message ClientMessage {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message ServerMessage {
  int64 value = 1;
}

service RemoteDBService {
  rpc getValue(ClientMessage) returns (stream ServerMessage);
}
